start hooking up to wallpaper engine

--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,25 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title><%= htmlWebpackPlugin.options.title %></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    * { 
-      margin: 0; 
-      padding: 0; 
-    }
-    
-    html,
-    body {
-      height: 100%;
-      width: 100%;
-    }
-    
-    body {
-      background-color: #22212C;
-    }
-  </style>
-</head>
-<body>
-  <canvas id="canvas"></canvas>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
+      html,
+      body {
+        height: 100%;
+        width: 100%;
+      }
+
+      body {
+        background-color: #22212c;
+      }
+    </style>
+  </head>
+
+  <body>
+    <canvas id="canvas"></canvas>
+  </body>
 </html>
